--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -806,119 +806,382 @@ body, #container-wrap { background:#ededed; }
 	top:251px !important;
 }
 
+#item11915 {
+	width:27px !important;
+	height:27px !important;
+	left:1063px !important;
+	top:27px !important;
+}
+
+#item11925 {
+	width:28px !important;
+	height:28px !important;
+	left:1100px !important;
+	top:27px !important;
+}
+
+#item11933 {
+	width:30px !important;
+	height:31px !important;
+	left:1136px !important;
+	top:24px !important;
+}
+
+#item11943 {
+	width:89px !important;
+	height:34px !important;
+	left:113px !important;
+	top:21px !important;
+}
+
+#item12067 {
+	width:53px !important;
+	height:12px !important;
+}
+
+#item12041 {
+	width:53px !important;
+	height:12px !important;
+}
+
+#item12038 {
+	width:53px !important;
+	height:12px !important;
+	left:256px !important;
+	top:43px !important;
+}
+
+#item12120 {
+	width:72px !important;
+	height:12px !important;
+}
+
+#item12094 {
+	width:72px !important;
+	height:12px !important;
+}
+
+#item12092 {
+	width:72px !important;
+	height:12px !important;
+	left:340px !important;
+	top:43px !important;
+}
+
+#item12173 {
+	width:77px !important;
+	height:12px !important;
+}
+
+#item12147 {
+	width:77px !important;
+	height:12px !important;
+}
+
+#item12145 {
+	width:77px !important;
+	height:12px !important;
+	left:440px !important;
+	top:43px !important;
+}
+
+#item12227 {
+	width:65px !important;
+	height:12px !important;
+}
+
+#item12201 {
+	width:65px !important;
+	height:12px !important;
+}
+
+#item12198 {
+	width:65px !important;
+	height:12px !important;
+	left:686px !important;
+	top:43px !important;
+}
+
+#item12281 {
+	width:136px !important;
+	height:12px !important;
+}
+
+#item12255 {
+	width:136px !important;
+	height:12px !important;
+}
+
+#item12252 {
+	width:136px !important;
+	height:12px !important;
+	left:771px !important;
+	top:43px !important;
+}
+
+#item12334 {
+	width:91px !important;
+	height:12px !important;
+}
+
+#item12308 {
+	width:91px !important;
+	height:12px !important;
+}
+
+#item12306 {
+	width:91px !important;
+	height:12px !important;
+	left:925px !important;
+	top:43px !important;
+}
+
+#item12387 {
+	width:128px !important;
+	height:12px !important;
+}
+
+#item12361 {
+	width:128px !important;
+	height:12px !important;
+}
+
+#item12359 {
+	width:128px !important;
+	height:12px !important;
+	left:537px !important;
+	top:43px !important;
+}
+
 #item12451 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#f28620;
 }
 
 #item12477 {
-	width:395px !important;
-	height:135px !important;
-	top:615px !important;
+	width:263px !important;
+	height:100px !important;
+	top:400px !important;
 	background:#f28620;
 	padding:15px;
 }
 
 #item12420 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#253885;
 }
 
 #item12412 {
-	width:395px !important;
-	height:750px !important;
-	left:-150px !important;
-	top:163px !important;
+	width:263px !important;
+	height:500px !important;
+	left:113px !important;
+	top:589px !important;
 }
 
 #item12538 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#f28620;
 }
 
 #item12563 {
-	width:395px !important;
-	height:135px !important;
-	top:615px !important;
+	width:263px !important;
+	height:100px !important;
+	top:400px !important;
 	background:#f28620;
 	padding:15px;
 }
 
 #item12508 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#253885;
 }
 
 #item12502 {
-	width:395px !important;
-	height:750px !important;
-	left:245px !important;
-	top:163px !important;
+	width:263px !important;
+	height:500px !important;
+	left:377px !important;
+	top:589px !important;
 }
 
 #item12624 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#f28620;
 }
 
 #item12649 {
-	width:395px !important;
-	height:135px !important;
-	top:615px !important;
+	width:263px !important;
+	height:100px !important;
+	top:400px !important;
 	background:#f28620;
 	padding:15px;
 }
 
 #item12594 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#253885;
 }
 
 #item12588 {
-	width:395px !important;
-	height:750px !important;
+	width:263px !important;
+	height:500px !important;
 	left:640px !important;
-	top:163px !important;
+	top:589px !important;
 }
 
 #item12712 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#f28620;
 }
 
 #item12737 {
-	width:395px !important;
-	height:135px !important;
-	top:615px !important;
+	width:263px !important;
+	height:100px !important;
+	top:400px !important;
 	background:#f28620;
 	padding:15px;
 }
 
 #item12681 {
-	width:395px !important;
-	height:135px !important;
+	width:263px !important;
+	height:90px !important;
 	background:#253885;
 }
 
 #item12674 {
-	width:395px !important;
-	height:750px !important;
-	left:1035px !important;
-	top:163px !important;
+	width:263px !important;
+	height:500px !important;
+	left:903px !important;
+	top:589px !important;
+}
+
+#item12762 {
+	width:374px !important;
+	height:62px !important;
+	left:114px !important;
+	top:75px !important;
+	background:#fff;
+	padding:0px 50px 0px 0px;
+}
+
+#item12787 {
+	width:429px !important;
+	height:62px !important;
+	left:113px !important;
+	top:137px !important;
+	background:#fff;
+	padding:0px 50px 0px 0px;
+}
+
+#item12812 {
+	width:487px !important;
+	height:62px !important;
+	left:113px !important;
+	top:197px !important;
+	background:#fff;
+	padding:0px 50px 0px 0px;
+}
+
+#item12837 {
+	width:185px !important;
+	height:62px !important;
+	left:113px !important;
+	top:258px !important;
+	background:#fff;
+	padding:0px 50px 0px 0px;
 }
 
 #item12862 {
-	width:263px !important;
-	height:301px !important;
-	left:-150px !important;
-	top:-188px !important;
+	width:175px !important;
+	height:201px !important;
+	left:113px !important;
+	top:354px !important;
+}
+
+p.autoParaStyle10 {
+	font-weight:300;
+	font-family:"Gill Sans",sans-serif;
+	font-size:33px;
+	line-height:39.6px;
+	color:#000;
+	text-transform:uppercase;
+	hyphens:auto;
+	-moz-hyphens:auto;
+	-ms-hyphens:auto;
+	-webkit-hyphens:auto;
+	hyphenate-after:2;
+	-ms-hyphenate-after:2;
+	-moz-hyphenate-after:2;
+	-webkit-hyphenate-after:2;
+	hyphenate-before:2;
+	-ms-hyphenate-before:2;
+	-moz-hyphenate-before:2;
+	-webkit-hyphenate-before:2;
+	text-align:left;
+}
+
+p.autoParaStyle9 {
+	font-family:Arial,sans-serif;
+	font-size:12px;
+	line-height:14.4px;
+	color:#fff;
+	text-align:center;
+}
+
+p.autoParaStyle8 {
+	font-weight:300;
+	font-family:"Gill Sans",sans-serif;
+	font-size:20px;
+	line-height:24px;
+	color:#ffffff;
+	text-transform:uppercase;
+	text-align:center;
+}
+
+p.autoParaStyle7 {
+	font-family:Arial,sans-serif;
+	font-size:12px;
+	line-height:14.4px;
+	color:#ffffff;
+	hyphens:auto;
+	-moz-hyphens:auto;
+	-ms-hyphens:auto;
+	-webkit-hyphens:auto;
+	hyphenate-after:2;
+	-ms-hyphenate-after:2;
+	-moz-hyphenate-after:2;
+	-webkit-hyphenate-after:2;
+	hyphenate-before:2;
+	-ms-hyphenate-before:2;
+	-moz-hyphenate-before:2;
+	-webkit-hyphenate-before:2;
+	text-align:center;
+}
+
+p.autoParaStyle6 {
+	font-family:Arial,sans-serif;
+	font-size:12px;
+	line-height:14.4px;
+	color:#f28620;
+	hyphens:auto;
+	-moz-hyphens:auto;
+	-ms-hyphens:auto;
+	-webkit-hyphens:auto;
+	hyphenate-after:2;
+	-ms-hyphenate-after:2;
+	-moz-hyphenate-after:2;
+	-webkit-hyphenate-after:2;
+	hyphenate-before:2;
+	-ms-hyphenate-before:2;
+	-moz-hyphenate-before:2;
+	-webkit-hyphenate-before:2;
+	text-align:center;
 }
 
 p.autoParaStyle5 {
