--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -794,6 +794,80 @@ body, #container-wrap { background:#ededed; }
 	top:1783px !important;
 }
 
+#item43925 {
+	width:492px !important;
+	top:449px !important;
+	min-height:78px !important;
+}
+
+#item43673 {
+	width:492px !important;
+	top:449px !important;
+	min-height:78px !important;
+}
+
+#item43918 {
+	width:492px !important;
+	height:527px !important;
+	left:170px !important;
+	top:2245px !important;
+}
+
+#item43893 {
+	width:492px !important;
+	top:449px !important;
+	min-height:78px !important;
+}
+
+#item43768 {
+	width:492px !important;
+	top:449px !important;
+	min-height:78px !important;
+}
+
+#item43887 {
+	width:492px !important;
+	height:527px !important;
+	left:714px !important;
+	top:2245px !important;
+}
+
+#item43861 {
+	width:492px !important;
+	top:449px !important;
+	min-height:78px !important;
+}
+
+#item43793 {
+	width:492px !important;
+	top:449px !important;
+	min-height:78px !important;
+}
+
+#item43855 {
+	width:492px !important;
+	height:527px !important;
+	left:1258px !important;
+	top:2245px !important;
+}
+
+p.autoParaStyle7 {
+	font-family:Arial,sans-serif;
+	font-size:22px;
+	line-height:26.4px;
+	color:#ffffff;
+	text-transform:uppercase;
+	text-align:center;
+}
+
+p.autoParaStyle6 {
+	font-family:Arial,sans-serif;
+	font-size:22px;
+	line-height:26.4px;
+	color:#ffffff;
+	text-align:center;
+}
+
 p.autoParaStyle5 {
 	font-weight:300;
 	font-family:"Gill Sans",sans-serif;
